@@ -255,8 +255,8 @@ BrassTableCheck::check(const char * tablename, const string & path, int opts,
 	B.block_check(C, B.level, opts);
 
 	/* the bit map should now be entirely clear: */
-
-	if (!B.base.is_empty()) {
+	B.base.calculate_last_block();
+	if (B.base.get_bit_map_size() != 0) {
 	    B.failure("Unused block(s) marked used in bitmap");
 	}
     }
